# misc

./: README.md  experiment_ledger.md  mcp_tool_manager_blueprint.md  utterance-dedup-pipeline.py
mcp_tool_manager/: .coveragerc  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
mcp_tool_manager/mcp_tool_manager/: config.py  dependencies.py  main.py  models.py  telemetry.py
mcp_tool_manager/mcp_tool_manager/api/: health.py  metrics.py  sync.py
mcp_tool_manager/mcp_tool_manager/services/: cache.py  embedding.py  executor.py  fetch.py  registry.py  search.py  summariser.py
mcp_tool_manager/mcp_tool_manager/tools/: call.py  fetch.py  find.py
mcp_tool_manager/tests/: conftest.py  test_api.py  test_cache.py  test_cache_extended.py  test_config.py  test_dependencies.py  test_embedding.py  test_executor.py  test_executor_coverage.py  test_executor_extended.py  test_fetch.py  test_fetch_coverage.py  test_fetch_extended.py  test_main.py  test_misc_coverage.py  test_models.py  test_registry.py  test_registry_coverage.py  test_registry_extended.py  test_search.py  test_search_extended.py  test_summariser.py  test_telemetry.py  test_tools.py
