[project]
name = "mcp-tool-manager"
version = "0.1.0"
description = "MCP sidecar server for managing large numbers of MCP tools"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "redisvl>=0.16",
    "redis[hiredis]>=5.2",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jsonschema>=4.23",
    "boto3>=1.35",
    "arize-phoenix-otel>=0.13",
    "openinference-semantic-conventions>=0.1",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp>=1.30",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "fakeredis>=2.26",
    "boto3-stubs[bedrock-runtime]>=1.35",
    "moto[bedrock]>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_tool_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mcp_tool_manager --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "boto3-stubs[bedrock-runtime]>=1.42.73",
    "fakeredis>=2.26",
    "moto[bedrock]>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.9",
]
